[gd_scene load_steps=10 format=2]

[ext_resource path="res://addons/project_map/project_map.gd" type="Script" id=2]
[ext_resource path="res://addons/project_map/pm_file_node.tscn" type="PackedScene" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.2, 0.231373, 0.309804, 1 )

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 8.0
content_margin_right = 2.0
content_margin_top = 4.0
content_margin_bottom = 2.0
bg_color = Color( 0.14902, 0.172549, 0.231373, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.0509804, 0.0784314, 0.145098, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
corner_detail = 4

[sub_resource type="StyleBoxFlat" id=3]
content_margin_left = 8.0
content_margin_right = 2.0
content_margin_top = 4.0
content_margin_bottom = 2.0
bg_color = Color( 0.14902, 0.172549, 0.231373, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
corner_detail = 4

[sub_resource type="StyleBoxFlat" id=4]
content_margin_left = 8.0
content_margin_right = 2.0
content_margin_top = 4.0
content_margin_bottom = 2.0
bg_color = Color( 0.14902, 0.172549, 0.231373, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.0509804, 0.0784314, 0.145098, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
corner_detail = 4

[sub_resource type="StyleBoxFlat" id=5]
content_margin_left = 8.0
content_margin_right = 2.0
content_margin_top = 4.0
content_margin_bottom = 2.0
bg_color = Color( 0.14902, 0.172549, 0.231373, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
corner_detail = 4

[sub_resource type="StyleBoxFlat" id=6]
content_margin_left = 8.0
content_margin_right = 2.0
content_margin_top = 4.0
content_margin_bottom = 2.0
bg_color = Color( 0.14902, 0.172549, 0.231373, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.0509804, 0.0784314, 0.145098, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
corner_detail = 4

[sub_resource type="StyleBoxFlat" id=7]
content_margin_left = 8.0
content_margin_right = 2.0
content_margin_top = 4.0
content_margin_bottom = 2.0
bg_color = Color( 0.14902, 0.172549, 0.231373, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
corner_detail = 4

[node name="ProjectMap" type="GraphEdit"]
visible = false
margin_right = 931.0
margin_bottom = 548.0
rect_min_size = Vector2( 500, 500 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/bg = SubResource( 1 )
scroll_offset = Vector2( -135, -42 )
snap_distance = 32
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GraphNode4" parent="." instance=ExtResource( 3 )]
margin_left = 135.0
margin_top = 170.0
margin_right = 301.0
margin_bottom = 202.0
custom_styles/frame = SubResource( 2 )
custom_styles/selectedframe = SubResource( 3 )
offset = Vector2( 0, 128 )
path = "res://scene_control.tscn"

[node name="GraphNode5" parent="." instance=ExtResource( 3 )]
margin_left = 135.0
margin_top = 106.0
margin_right = 243.0
margin_bottom = 138.0
custom_styles/frame = SubResource( 2 )
custom_styles/selectedframe = SubResource( 3 )
offset = Vector2( 0, 64 )
path = "res://main.tscn"

[node name="GraphNode" parent="." instance=ExtResource( 3 )]
margin_left = 135.0
margin_top = 234.0
margin_right = 287.0
margin_bottom = 296.0
custom_styles/frame = SubResource( 4 )
custom_styles/selectedframe = SubResource( 5 )
offset = Vector2( 0, 192 )
path = "res://scene_3d.tscn"

[node name="GraphNode6" parent="." instance=ExtResource( 3 )]
margin_left = 135.0
margin_top = 298.0
margin_right = 287.0
margin_bottom = 360.0
custom_styles/frame = SubResource( 6 )
custom_styles/selectedframe = SubResource( 7 )
offset = Vector2( 0, 256 )
path = "res://scene_3d.tscn"

[node name="GraphNode2" parent="." instance=ExtResource( 3 )]
margin_left = 295.0
margin_top = 234.0
margin_right = 460.0
margin_bottom = 266.0
custom_styles/frame = SubResource( 2 )
custom_styles/selectedframe = SubResource( 3 )
offset = Vector2( 160, 192 )
path = "res://scene_3d_cube.gd"

[node name="GraphNode3" parent="." instance=ExtResource( 3 )]
margin_left = 295.0
margin_top = 298.0
margin_right = 470.0
margin_bottom = 360.0
custom_styles/frame = SubResource( 4 )
custom_styles/selectedframe = SubResource( 5 )
offset = Vector2( 160, 256 )
path = "res://scene_3d_cube.tscn"
[connection signal="_end_node_move" from="." to="." method="_on_GraphEdit__end_node_move"]
[connection signal="delete_nodes_request" from="." to="." method="_on_GraphEdit_delete_nodes_request"]
